--- a/angular.json
+++ b/angular.json
@@ -56,6 +56,11 @@
                 "bundleName": "custom-theme"
               },
               {
+                "input": "src/themes/monterrico/styles/theme.scss",
+                "inject": false,
+                "bundleName": "monterrico-theme"
+              },
+              {
                 "input": "src/themes/dspace/styles/theme.scss",
                 "inject": false,
                 "bundleName": "dspace-theme"
