update icons and home banner

--- a/config/config.yml
+++ b/config/config.yml
@@ -1,5 +1,5 @@
 # NOTE: will log all redux actions and transfers in console
-debug: false
+debug: true
 
 # Angular Universal server settings
 # NOTE: these settings define where Node.js will start your UI application. Therefore, these
